Fix whatever weird scrolling bug was happening (especially on mobile)

--- a/static/home.css
+++ b/static/home.css
@@ -60,13 +60,14 @@ html, body {
   font-size: 11pt;
   line-height: 20px;
   text-align: center;
+
   /* ungodly gradient stuff */
-  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.07) 3%, rgba(255,255,255,0.23) 10%, rgba(255,255,255,1) 32%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(3%,rgba(255,255,255,0.07)), color-stop(10%,rgba(255,255,255,0.23)), color-stop(32%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* W3C */
+  /*background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.07) 3%, rgba(255,255,255,0.23) 10%, rgba(255,255,255,1) 32%); *//* FF3.6+ */
+  /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(3%,rgba(255,255,255,0.07)), color-stop(10%,rgba(255,255,255,0.23)), color-stop(32%,rgba(255,255,255,1)));*/ /* Chrome,Safari4+ */
+  /*background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%);*/ /* Chrome10+,Safari5.1+ */
+  /*background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%);*/ /* Opera 11.10+ */
+  /*background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%);*/ /* IE10+ */
+  /*background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%);*/ /* W3C */
 }
 .footer-left {
   float: left;
